engine/crates/engine/src/registry/resolvers/graphql/snapshots/engine__registry__resolvers__graphql__serializer__tests__field_selections@query { foo { bar baz } qux { quux } }.snap
---
source: crates/engine/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	foo {
		__typename
		bar
		baz
	}

	qux {
		__typename
		quux
	}

}

