engine/crates/engine/src/registry/resolvers/graphql/snapshots/engine__registry__resolvers__graphql__serializer__tests__fragment_spread@query { ... fooBar @deprecated }.snap
---
source: crates/engine/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	... fooBar @deprecated
}

