engine/crates/engine/src/registry/resolvers/graphql/snapshots/engine__registry__resolvers__graphql__serializer__tests__inline_fragment@query { ... on Foo @skip { baz } }.snap
---
source: crates/engine/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	... on Foo @skip {
		__typename
		baz
	}
}

